# connectrpc-boilerplate

./: .gitignore  BUILD.bazel  MODULE.bazel  README.md  buf.gen.yaml  buf.yaml  go.mod  go.sum  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  turbo.json
apps/frontend/: package.json
apps/frontend/src/: App.tsx  main.tsx
cmd/service-a/: main.go
cmd/service-b/: BUILD.bazel  main.go
cmd/service_a/: BUILD.bazel  main.go
cmd/service_b/: BUILD.bazel  main.go
pkg/cors/: BUILD.bazel  cors.go
pkg/helper/: BUILD.bazel  helper.go
pkg/util/: BUILD.bazel  util.go
proto/: BUILD.bazel
proto/service-a/: testserver.proto
proto/service_a/v1/: BUILD.bazel  api.proto  auth.proto  count.proto  service_a.proto
scripts/: gopackagesdriver.sh
services/service_a/: BUILD.bazel  main.go
services/service_b/: BUILD.bazel
