"""Bazel module configuration for the bazel-playground project.

This MODULE.bazel file manages external dependencies using Bzlmod,
migrating from the traditional WORKSPACE approach. It specifies
the project's external dependency requirements.
"""

###############################################################################
# Bazel now uses Bzlmod by default to manage external dependencies.
# Please consider migrating your external dependencies from WORKSPACE to MODULE.bazel.
#
# For more details, please check https://github.com/bazelbuild/bazel/issues/18958
###############################################################################

bazel_dep(name = "rules_proto", version = "7.1.0")
bazel_dep(name = "rules_go", version = "0.51.0")
bazel_dep(name = "gazelle", version = "0.41.0")
bazel_dep(name = "protobuf", version = "29.3", repo_name = "com_google_protobuf")

# golang dependencies
go_deps = use_extension("@gazelle//:extensions.bzl", "go_deps")
go_deps.from_file(go_mod = "//:go.mod")

# All *direct* Go dependencies of the module have to be listed explicitly.
use_repo(
    go_deps,
    "com_connectrpc_connect",
    "com_github_moznion_go_optional",
    "org_golang_x_net",
)
