load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "client_lib",
    srcs = ["main.go"],
    importpath = "github.com/jimmyl02/bazel-playground-connectrpc/cmd/client",
    visibility = ["//visibility:private"],
    deps = [
        "//proto/testproto:testproto_go_proto",
        "@com_connectrpc_connect//:connect",
    ],
)

go_binary(
    name = "client",
    embed = [":client_lib"],
    visibility = ["//visibility:public"],
)
