load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "service_a_lib",
    srcs = ["main.go"],
    importpath = "github.com/jimmyl02/connectrpc-boilerplate/cmd/service_a",
    visibility = ["//visibility:private"],
    deps = ["//proto/service_a/v1:v1_go_proto"],
)

go_binary(
    name = "service_a",
    embed = [":service_a_lib"],
    visibility = ["//visibility:public"],
)
