load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "service_b_lib",
    srcs = ["main.go"],
    importpath = "github.com/jimmyl02/connectrpc-boilerplate/cmd/service_b",
    visibility = ["//visibility:private"],
    deps = [
        "@org_golang_x_net//http2",
        "@org_golang_x_net//http2/h2c",
    ],
)

go_binary(
    name = "service_b",
    embed = [":service_b_lib"],
    visibility = ["//visibility:public"],
)
