load("@rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "service_b_lib",
    srcs = ["main.go"],
    importpath = "github.com/jimmyl02/connectrpc-boilerplate/services/service_b",
    visibility = ["//visibility:private"],
    deps = [
        "//pkg/util",
        "//proto/service_a/v1:v1_go_proto",
        "@com_connectrpc_connect//:connect",
    ],
)

go_binary(
    name = "service_b",
    embed = [":service_b_lib"],
    visibility = ["//visibility:public"],
)
