load("@rules_go//proto:def.bzl", "go_proto_library")
load("@rules_proto//proto:defs.bzl", "proto_library")

proto_library(
    name = "v1_proto",
    srcs = [
        "api.proto",
        "auth.proto",
        "service_a.proto",
    ],
    strip_import_prefix = "/proto",
    visibility = ["//visibility:public"],
)

go_proto_library(
    name = "v1_go_proto",
    compilers = [
        "@rules_go//proto:go_proto",
        "//:connect_go_proto_compiler",
    ],
    importpath = "github.com/jimmyl02/connectrpc-boilerplate/proto/service_a/v1",
    proto = ":v1_proto",
    visibility = ["//visibility:public"],
)
